Removed custom CSS and updated icons etc
Regular updates of various pages

--- a/new/design/alignment-en.html
+++ b/new/design/alignment-en.html
@@ -27,7 +27,8 @@
         <div class="panel-body">
           <ul>
             <li><a href="#description">Description</a></li>
-            <li><a href="#options">Alignment options</a></li>
+            <li><a href="#options">Text alignment options</a></li>
+			<li><a href="#centre">Centre content blocks</a></li>
           </ul>
         </div>
       </div>
@@ -43,7 +44,7 @@
   </div>
   <h2 class="page-header" id="description">Description</h2>
   <p>Easily realign text to components with text alignment classes.</p>
-  <h2 class="page-header" id="options">Alignment options</h2>
+  <h2 class="page-header" id="options">Text alignment options</h2>
   <p>Easily realign text to components with text alignment classes.</p>
   <p class="text-left">Left aligned text.</p>
   <p class="text-center">Center aligned text.</p>
