--- a/new/design/icons-en.html
+++ b/new/design/icons-en.html
@@ -8,17 +8,6 @@
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 <link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
 <link rel="stylesheet" href="fa/css/font-awesome.min.css">
-<style type="text/css">
-
-[class*=clmn-2-] {
-	padding-left: 1.3em;
-	list-style: outside;
-}
-[class*=clmn-2-] > li {
-    margin-left: 1.3em;
-}
-
-</style>
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -104,9 +93,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Font Awesome option and CSS</th>
-      <th scope="col">Glyphicon option and CSS</th>
+      <th scope="col" class="col-sm-2">Name</th>
+      <th scope="col" class="col-sm-3">Font Awesome option and CSS</th>
+      <th scope="col" class="col-sm-3">Glyphicon option and CSS</th>
       <th scope="col">Defined meaning</th>
     </tr>
   </thead>
@@ -234,9 +223,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Font Awesome option and CSS</th>
-      <th scope="col">Glyphicon option and CSS</th>
+      <th scope="col" class="col-sm-2">Name</th>
+      <th scope="col" class="col-sm-3">Font Awesome option and CSS</th>
+      <th scope="col" class="col-sm-3">Glyphicon option and CSS</th>
       <th scope="col">Defined meaning</th>
     </tr>
   </thead>
@@ -326,9 +315,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Font Awesome option and CSS</th>
-      <th scope="col">Glyphicon option and CSS</th>
+      <th scope="col" class="col-sm-2">Name</th>
+      <th scope="col" class="col-sm-3">Font Awesome option and CSS</th>
+      <th scope="col" class="col-sm-3">Glyphicon option and CSS</th>
       <th scope="col">Defined meaning</th>
     </tr>
   </thead>
@@ -689,9 +678,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Font Awesome option and CSS</th>
-      <th scope="col">Glyphicon option and CSS</th>
+      <th scope="col" class="col-sm-2">Name</th>
+      <th scope="col" class="col-sm-3">Font Awesome option and CSS</th>
+      <th scope="col" class="col-sm-3">Glyphicon option and CSS</th>
       <th scope="col">Defined meaning</th>
     </tr>
   </thead>
@@ -1000,9 +989,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Font Awesome option and CSS</th>
-      <th scope="col">Glyphicon option and CSS</th>
+      <th scope="col" class="col-sm-2">Name</th>
+      <th scope="col" class="col-sm-3">Font Awesome option and CSS</th>
+      <th scope="col" class="col-sm-3">Glyphicon option and CSS</th>
       <th scope="col">Defined meaning</th>
     </tr>
   </thead>
@@ -1205,9 +1194,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Font Awesome option and CSS</th>
-      <th scope="col">Glyphicon option and CSS</th>
+      <th scope="col" class="col-sm-2">Name</th>
+      <th scope="col" class="col-sm-3">Font Awesome option and CSS</th>
+      <th scope="col" class="col-sm-3">Glyphicon option and CSS</th>
       <th scope="col">Defined meaning</th>
     </tr>
   </thead>
@@ -1504,9 +1493,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Font Awesome option and CSS</th>
-      <th scope="col">Glyphicon option and CSS</th>
+      <th scope="col" class="col-sm-2">Name</th>
+      <th scope="col" class="col-sm-3">Font Awesome option and CSS</th>
+      <th scope="col" class="col-sm-3">Glyphicon option and CSS</th>
       <th scope="col">Defined meaning</th>
     </tr>
   </thead>
@@ -1626,9 +1615,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Font Awesome option and CSS</th>
-      <th scope="col">Glyphicon option and CSS</th>
+      <th scope="col" class="col-sm-2">Name</th>
+      <th scope="col" class="col-sm-3">Font Awesome option and CSS</th>
+      <th scope="col" class="col-sm-3">Glyphicon option and CSS</th>
       <th scope="col">Defined meaning</th>
     </tr>
   </thead>
@@ -2459,9 +2448,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Font Awesome option and CSS</th>
-      <th scope="col">Glyphicon option and CSS</th>
+      <th scope="col" class="col-sm-2">Name</th>
+      <th scope="col" class="col-sm-3">Font Awesome option and CSS</th>
+      <th scope="col" class="col-sm-3">Glyphicon option and CSS</th>
       <th scope="col">Defined meaning</th>
     </tr>
   </thead>
@@ -2537,9 +2526,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Font Awesome option and CSS</th>
-      <th scope="col">Glyphicon option and CSS</th>
+      <th scope="col" class="col-sm-2">Name</th>
+      <th scope="col" class="col-sm-3">Font Awesome option and CSS</th>
+      <th scope="col" class="col-sm-3">Glyphicon option and CSS</th>
       <th scope="col">Defined meaning</th>
     </tr>
   </thead>
@@ -2569,9 +2558,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Font Awesome option and CSS</th>
-      <th scope="col">Glyphicon option and CSS</th>
+      <th scope="col" class="col-sm-2">Name</th>
+      <th scope="col" class="col-sm-3">Font Awesome option and CSS</th>
+      <th scope="col" class="col-sm-3">Glyphicon option and CSS</th>
       <th scope="col">Defined meaning</th>
     </tr>
   </thead>
@@ -2688,9 +2677,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Font Awesome option and CSS</th>
-      <th scope="col">Glyphicon option and CSS</th>
+      <th scope="col" class="col-sm-2">Name</th>
+      <th scope="col" class="col-sm-3">Font Awesome option and CSS</th>
+      <th scope="col" class="col-sm-3">Glyphicon option and CSS</th>
       <th scope="col">Defined meaning</th>
     </tr>
   </thead>
@@ -2756,9 +2745,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Font Awesome option and CSS</th>
-      <th scope="col">Glyphicon option and CSS</th>
+      <th scope="col" class="col-sm-2">Name</th>
+      <th scope="col" class="col-sm-3">Font Awesome option and CSS</th>
+      <th scope="col" class="col-sm-3">Glyphicon option and CSS</th>
       <th scope="col">Defined meaning</th>
     </tr>
   </thead>
