--- a/new/design/images-en.html
+++ b/new/design/images-en.html
@@ -27,7 +27,7 @@
         <div class="panel-body">
           <ul>
             <li><a href="#description">Description</a></li>
-            <li><a href="#bordering">Cropping and bordering images</a></li>
+            <li><a href="#shapes">Image shapes</a></li>
             <li><a href="#overview-responsive-images">Responsive images</a></li>
             <li><a href="#thumbnails">Thumbnails</a></li>
             <li><a href="#media">Media objects</a></li>
@@ -40,7 +40,7 @@
         <div class="panel-heading">
           <h2 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h2>
         </div>
-        <div class="list-group"><a href="icons-en.html" class="list-group-item">Icons<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/lightbox/lightbox-en.html" class="list-group-item">Lightbox<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/tabs/tabs-carousel-en.html" class="list-group-item">Tabbed interface: Carousel<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/data-picture/data-picture-en.html" class="list-group-item">Data picture<span class="wb-inv"> - Design guide</span></a></div>
+        <div class="list-group"><a href="visible-en.html#replacement" class="list-group-item">Icons<span class="wb-inv"> - Design guide</span></a> <a href="visible.html#replacement" class="list-group-item">Image replacement<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/lightbox/lightbox-en.html" class="list-group-item">Lightbox<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/tabs/tabs-carousel-en.html" class="list-group-item">Tabbed interface: Carousel<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/data-picture/data-picture-en.html" class="list-group-item">Data picture<span class="wb-inv"> - Design guide</span></a></div>
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
@@ -58,7 +58,7 @@
     <div class="mrgn-lft-md mrgn-rght-md">
       <h2 class="page-header" id="description">Description</h2>
       <p>An image is a static two dimensional visual artifact that is a type of non-text content classified as <a href="../accessibility/images-en.html#decorative">decorative</a>, <a href="../accessibility/images-en.html#simple">simple</a>, <a href="../accessibility/images-en.html#complex">complex</a>, or an <a href="../accessibility/images-en.html#text">image of text</a>.</p>
-      <h2 class="page-header" id="bordering">Cropping and bordering images</h2>
+      <h2 class="page-header" id="shapes">Image shapes</h2>
       <p>Add classes to an <code>&lt;img&gt;</code> element to easily style images in any project.</p>
       <div class="alert alert-warning">
         <h4>Cross-browser compatibility</h4>
