--- a/new/index-en.html
+++ b/new/index-en.html
@@ -26,7 +26,7 @@
           <div class="panel-body">
             <h2 class="mrgn-tp-0 h3">Design guide</h2>
             <p>Offers a large selection of design and layout features for both basic and complex designs.</p>
-            <p class="text-center"><a href="design/index-en.html" style="text-decoration: none;"><span class="fa-stack text-muted fa-3x hidden-xs hidden-sm center-block"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-code fa-stack-1x fa-inverse"></span></span><span class="btn btn-primary btn-block">Design guide</span></a></p>
+            <p class="text-center"><a href="design/index-en.html" style="text-decoration: none;"><span class="fa-stack text-muted fa-3x hidden-xs hidden-sm center-block"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-picture-o fa-stack-1x fa-inverse"></span></span><span class="btn btn-primary btn-block">Design guide</span></a></p>
           </div>
         </div>
       </div>
