--- a/new/design/borders-en.html
+++ b/new/design/borders-en.html
@@ -29,6 +29,7 @@
             <li><a href="#description">Description</a></li>
             <li><a href="#options">Border options</a></li>
             <li><a href="#headings">Borders on headings</a></li>
+            <li><a href="#radius">Remove border radius</a></li>
           </ul>
         </div>
       </div>
@@ -105,6 +106,36 @@
         <p class="mrgn-tp-md mrgn-bttm-md mrgn-lft-md mrgn-rght-md">Top, right, bottom and left border <br>
           <code>&lt;p class=&quot;brdr-tp brdr-rght brdr-bttm brdr-lft&quot;&gt;</code></p>
       </div>
+    </div>
+  </div>
+  <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+    <div class="col-md-6">
+      <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+      <p>(Info goes here)</p>
+    </div>
+    <div class="col-md-6 brdr-lft">
+      <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+      <p>(Info goes here)</p>
+    </div>
+  </div>
+  <h2 class="page-header" id="radius">Remove border radius</h2>
+  <p>Apply <code>brdr-rds-0</code> to remove the border radius that appears on certain design elements,</p>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="well">
+        <p>Default well</p>
+      </div>
+      <pre><code>&lt;div class=&quot;well&quot;&gt;
+  ...
+&lt;/div&gt;</code></pre>
+    </div>
+    <div class="col-sm-6 ">
+      <div class="well brdr-rds-0">
+        <p>Well with border radius removed</p>
+      </div>
+      <pre><code>&lt;div class=&quot;well brdr-rds-0 &quot;&gt;
+  ...
+&lt;/div&gt;</code></pre>
     </div>
   </div>
   <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
