--- a/new/design/buttons-en.html
+++ b/new/design/buttons-en.html
@@ -186,13 +186,17 @@
   </div>
   <h2 class="page-header" id="buttons-block">Full width buttons</h2>
   <p>Create block level buttons&mdash;those that span the full width of a parent&mdash; by adding <code>.btn-block</code>.</p>
-  <div class="well" style="max-width: 400px; margin: 0 auto 10px;">
+  <div class="row">
+  <div class="col-xs-6">
     <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
     <button type="button" class="btn btn-default btn-lg btn-block">Block level button</button>
   </div>
+  </div>
   <div class="mrgn-tp-lg">
-    <pre><code>&lt;button type=&quot;button&quot; class=&quot;btn btn-primary btn-lg btn-block&quot;&gt;Block level button&lt;/button&gt;
-&lt;button type=&quot;button&quot; class=&quot;btn btn-default btn-lg btn-block&quot;&gt;Block level button&lt;/button&gt;
+    <pre><code>&lt;div class=&quot;col-xs-6&quot;&gt;
+  &lt;button type=&quot;button&quot; class=&quot;btn btn-primary btn-lg btn-block&quot;&gt;Block level button&lt;/button&gt;
+  &lt;button type=&quot;button&quot; class=&quot;btn btn-default btn-lg btn-block&quot;&gt;Block level button&lt;/button&gt;
+&lt;/div&gt;
 </code></pre>
   </div>
   <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
@@ -349,21 +353,21 @@
   </div>
   <h3 id="btn-groups-sizing">Sizing</h3>
   <p>Instead of applying button sizing classes to every button in a group, just add <code>.btn-group-*</code> to the <code>.btn-group</code>.</p>
-  <div class="btn-toolbar" role="toolbar">
+  <div class="btn-toolbar mrgn-bttm-md" role="toolbar">
     <div class="btn-group btn-group-lg">
       <button type="button" class="btn btn-default">Left</button>
       <button type="button" class="btn btn-default">Middle</button>
       <button type="button" class="btn btn-default">Right</button>
     </div>
   </div>
-  <div class="btn-toolbar" role="toolbar">
+  <div class="btn-toolbar mrgn-bttm-md" role="toolbar">
     <div class="btn-group">
       <button type="button" class="btn btn-default">Left</button>
       <button type="button" class="btn btn-default">Middle</button>
       <button type="button" class="btn btn-default">Right</button>
     </div>
   </div>
-  <div class="btn-toolbar" role="toolbar">
+  <div class="btn-toolbar mrgn-bttm-md" role="toolbar">
     <div class="btn-group btn-group-sm">
       <button type="button" class="btn btn-default">Left</button>
       <button type="button" class="btn btn-default">Middle</button>
@@ -486,16 +490,66 @@
       <p>(Info goes here)</p>
     </div>
   </div>
-  <h3 id="btn-groups-justified">Justified link variation</h3>
-  <p>Make a group of buttons stretch at the same size to span the entire width of its parent.</p>
+  <h3 id="btn-groups-justified">Justified button groups</h3>
   <div class="alert alert-warning">
-    <h4>Element-specific usage</h4>
-    <p>This only works with <code>&lt;a&gt;</code> elements as the <code>&lt;button&gt;</code> doesn't pick up these styles.</p>
+    <h4>Handling borders</h4>
+    <p>Due to the specific HTML and CSS used to justify buttons (namely <code>display: table-cell</code>), the borders between them are doubled. In regular button groups, <code>margin-left: -1px</code> is used to stack the borders instead of removing them. However, <code>margin</code> doesn't work with <code>display: table-cell</code>. As a result, depending on your customizations to Bootstrap, you may wish to remove or re-color the borders.</p>
   </div>
-  <div class="btn-group btn-group-justified"> <a class="btn btn-default" role="button">Left</a> <a class="btn btn-default" role="button">Middle</a> <a class="btn btn-default" role="button">Right</a></div>
+  <h4>With <code>&lt;a&gt;</code> elements</h4>
+  <p>Just wrap a series of <code>.btn</code>s in <code>.btn-group.btn-group-justified</code>.</p>
+  <div class="btn-group btn-group-justified"> <a class="btn btn-default" role="button">Left</a> <a class="btn btn-default" role="button">Middle</a> <a class="btn btn-default" role="button">Right</a> </div>
+  <br>
+  <div class="btn-group btn-group-justified"> <a class="btn btn-default" role="button">Left</a> <a class="btn btn-default" role="button">Middle</a>
+    <div class="btn-group"> <a class="btn btn-default dropdown-toggle" data-toggle="dropdown"> Dropdown <span class="caret"></span> </a>
+      <ul class="dropdown-menu" role="menu">
+        <li><a href="#">Action</a></li>
+        <li><a href="#">Another action</a></li>
+        <li><a href="#">Something else here</a></li>
+        <li class="divider"></li>
+        <li><a href="#">Separated link</a></li>
+      </ul>
+    </div>
+  </div>
   <div class="mrgn-tp-lg">
-    <pre><code>&lt;div class=&quot;btn-group btn-group-justified&quot;&gt;
+    <pre><code class="html">&lt;div class="btn-group btn-group-justified"&gt;
   ...
+&lt;/div&gt;
+</code></pre>
+  </div>
+  <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+    <div class="col-md-6">
+      <h4 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h4>
+      <p>(Info goes here)</p>
+    </div>
+    <div class="col-md-6 brdr-lft">
+      <h4 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h4>
+      <p>(Info goes here)</p>
+    </div>
+  </div>
+  <h4 class="mrgn-tp-lg">With <code>&lt;button&gt;</code> elements</h4>
+  <p>To use justified button groups with <code>&lt;button&gt;</code> elements, <strong class="text-danger">you must wrap each button in a button group</strong>. Most browsers don't properly apply our CSS for justification to <code>&lt;button&gt;</code> elements, but since we support button dropdowns, we can workaround that.</p>
+  <div class="btn-group btn-group-justified">
+    <div class="btn-group">
+      <button type="button" class="btn btn-default">Left</button>
+    </div>
+    <div class="btn-group">
+      <button type="button" class="btn btn-default">Middle</button>
+    </div>
+    <div class="btn-group">
+      <button type="button" class="btn btn-default">Right</button>
+    </div>
+  </div>
+  <div class="mrgn-tp-lg">
+    <pre><code>&lt;div class="btn-group btn-group-justified"&gt;
+  &lt;div class="btn-group"&gt;
+    &lt;button type="button" class="btn btn-default"&gt;Left&lt;/button&gt;
+  &lt;/div&gt;
+  &lt;div class="btn-group"&gt;
+    &lt;button type="button" class="btn btn-default"&gt;Middle&lt;/button&gt;
+  &lt;/div&gt;
+  &lt;div class="btn-group"&gt;
+    &lt;button type="button" class="btn btn-default"&gt;Right&lt;/button&gt;
+  &lt;/div&gt;
 &lt;/div&gt;
 </code></pre>
   </div>
@@ -701,7 +755,7 @@
   </div>
   <h3 id="btn-dropdowns-sizing">Sizing</h3>
   <p>Button dropdowns work with buttons of all sizes.</p>
-  <div class="btn-toolbar" role="toolbar">
+  <div class="btn-toolbar mrgn-bttm-md" role="toolbar">
     <div class="btn-group">
       <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown"> Large button <span class="caret"></span> </button>
       <ul class="dropdown-menu" role="menu">
@@ -713,7 +767,7 @@
       </ul>
     </div>
   </div>
-  <div class="btn-toolbar" role="toolbar">
+  <div class="btn-toolbar mrgn-bttm-md" role="toolbar">
     <div class="btn-group">
       <button class="btn btn-default btn-sm dropdown-toggle" type="button" data-toggle="dropdown"> Small button <span class="caret"></span> </button>
       <ul class="dropdown-menu" role="menu">
