--- a/new/design/colour-en.html
+++ b/new/design/colour-en.html
@@ -29,6 +29,7 @@
             <li><a href="#description">Description</a></li>
             <li><a href="#default">Default appearance </a></li>
             <li><a href="#text">Coloured text</a></li>
+			<li><a href="#background">Coloured backgrounds</a></li>
             <li><a href="#message">Coloured message boxes</a></li>
             <li><a href="#tables">Coloured tables</a></li>
           </ul>
@@ -85,6 +86,33 @@
           <p>(Info goes here)</p>
         </div>
       </div>
+	  <h2 class="page-header" id="background">Coloured backgrounds</h2>
+	  <p>Similar to the contextual text color classes, easily set the background of an element to any contextual class. Anchor components will darken on hover, just like the text classes.</p>
+  
+    <p class="bg-primary">Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+    <p class="bg-success">Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
+    <p class="bg-info">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+    <p class="bg-warning">Etiam porta sem malesuada magna mollis euismod.</p>
+    <p class="bg-danger">Donec ullamcorper nulla non metus auctor fringilla.</p>
+ 
+<div class="mrgn-tp-lg"><pre><code>&lt;p class="bg-primary"&gt;...&lt;/p&gt;
+&lt;p class="bg-success"&gt;...&lt;/p&gt;
+&lt;p class="bg-info"&gt;...&lt;/p&gt;
+&lt;p class="bg-warning"&gt;...&lt;/p&gt;
+&lt;p class="bg-danger"&gt;...&lt;/p&gt;
+</code></pre></div>
+	  
+	  <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+        <div class="col-md-6">
+          <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+          <p>(Info goes here)</p>
+        </div>
+        <div class="col-md-6 brdr-lft">
+          <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+          <p>(Info goes here)</p>
+        </div>
+      </div>
+	  
       <h2 class="page-header" id="message">Coloured message boxes</h2>
       <p>For message colour options, refer to:</p>
       <ul>
