--- a/new/design/headings-en.html
+++ b/new/design/headings-en.html
@@ -31,7 +31,6 @@
             <li><a href="#sizes">Sizes</a></li>
             <li><a href="#secondary">Secondary text</a></li>
             <li><a href="#underline">Underline</a></li>
-            <li><a href="#colours">Colours</a></li>
           </ul>
         </div>
       </div>
@@ -82,13 +81,13 @@
       </div>
     </div>
     <h2 class="page-header" id="sizes">Sizes</h2>
-    <p><code>.h1</code> through <code>.h6</code> classes are available.</p>
-    <h1 class="h2">h1 that is h2 size</h1>
-    <h2 class="h3">h2 that is h3 size</h2>
-    <h3 class="h4">h3 that is h4 size</h3>
-    <h4 class="h5">h4 that is h5 size</h4>
-    <h5 class="h6">h5 that is h6 size</h5>
-    <h6 class="h1">h6 that is h1 size</h6>
+    <p><code>.h1</code>, <code>.h2</code>, <code>.h3</code>, <code>.h4</code>, <code>.h5</code>, <code>.h6</code> classes are available.</p>
+    <h1 class="h2">h1 that is <code>.h2</code> size</h1>
+    <h2 class="h3">h2 that is <code>.h3</code> size</h2>
+    <h3 class="h4">h3 that is <code>.h4</code> size</h3>
+    <h4 class="h5">h4 that is <code>.h5</code> size</h4>
+    <h5 class="h6">h5 that is <code>.h6</code> size</h5>
+    <h6 class="h1">h6 that is <code>.h1</code> size</h6>
     <div class="mrgn-tp-lg">
       <pre>&lt;h1 class=&quot;h2&quot;&gt;h1 that is h2 size&lt;/h1&gt;
 &lt;h2 class=&quot;h3&quot;&gt;h2 that is h3 size&lt;/h2&gt;
@@ -161,8 +160,7 @@
         <p>(Info goes here)</p>
       </div>
     </div>
-    <h2 class="page-header" id="colours">Colours</h2>
-    <p>(Info goes here - link to alerts and link to panels) </p>
+   
     <p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
   </div>
 </div>
