--- a/new/design/index-en.html
+++ b/new/design/index-en.html
@@ -7,20 +7,6 @@
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 <link rel="stylesheet" href="../design/fa/css/font-awesome.min.css">
-<style type="text/css">
-blockquote p {font-size:16px;}
-</style>
-<style type="text/css">
-
-.clmn-2-sm {
-	padding-left: 1.1em;
-	list-style: outside;
-}
-.clmn-2-sm li {
-    margin-left: 1.1em;
-}
-
-</style>
 </head>
 <body class="container">
 <ol class="breadcrumb">
@@ -33,7 +19,7 @@ blockquote p {font-size:16px;}
 <div class="row">
   <div class="col-md-8">
     <div class="row">
-      <div class="col-md-4 col-lg-3 visible-md visible-lg "> <span class="fa-stack fa-5x"> <span class="fa fa-circle fa-stack-2x"></span> <span class="fa fa-code fa-stack-1x fa-inverse"></span></span> </div>
+      <div class="col-md-4 col-lg-3 visible-md visible-lg "> <span class="fa-stack fa-5x"> <span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-picture-o fa-stack-1x fa-inverse"></span></span> </div>
       <div class="col-md-8 col-lg-9">
         <p>The design guide offers a large selection of design and layout features for both basic and complex designs:</p>
         <ul class="list-unstyled">
@@ -46,7 +32,7 @@ blockquote p {font-size:16px;}
     </div>
   </div>
   <div class="col-md-4">
-    <div class="list-group hidden-xs hidden-sm"><a href="../design/index-en.html" class="list-group-item active"><span class="fa fa-code fa-inversed"></span> Design guide </a> <a href="../writing/index-en.html" class="list-group-item"><span class="fa fa-font text-muted"></span> Writing guide</a> <a href="../usability/index-en.html" class="list-group-item"><span class="fa fa-smile-o text-muted"></span> Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</a></div>
+    <div class="list-group hidden-xs hidden-sm"><a href="../design/index-en.html" class="list-group-item active"><span class="fa fa-picture-o fa-inversed"></span> Design guide </a> <a href="../writing/index-en.html" class="list-group-item"><span class="fa fa-font text-muted"></span> Writing guide</a> <a href="../usability/index-en.html" class="list-group-item"><span class="fa fa-smile-o text-muted"></span> Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</a></div>
   </div>
 </div>
 <div class="row">
@@ -354,6 +340,6 @@ blockquote p {font-size:16px;}
   </table>
 </div>
 <p><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for these pages is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
-<div class="list-group visible-xs visible-sm"><a href="../design/index-en.html" class="list-group-item active"><span class="fa fa-code fa-inversed"></span> Design guide </a> <a href="../writing/index-en.html" class="list-group-item"><span class="fa fa-font text-muted"></span> Writing guide</a> <a href="../usability/index-en.html" class="list-group-item"><span class="fa fa-smile-o text-muted"></span> Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</a></div>
+<div class="list-group visible-xs visible-sm"><a href="../design/index-en.html" class="list-group-item active"><span class="fa fa-picture-o fa-inversed"></span> Design guide </a> <a href="../writing/index-en.html" class="list-group-item"><span class="fa fa-font text-muted"></span> Writing guide</a> <a href="../usability/index-en.html" class="list-group-item"><span class="fa fa-smile-o text-muted"></span> Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</a></div>
 </body>
 </html>
