--- a/new/design/position-en.html
+++ b/new/design/position-en.html
@@ -96,13 +96,13 @@
         <div class="col-md-8 pstn-tp-md pstn-rght-md">
           <div class="row">
             <div class="col-md-4 opct-90"> <a href="#"><img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png" alt="" class="img-responsive">
-              <p class="small well well-sm">125 years of parks</p>
+              <p class="small well brdr-rds-0 well-sm">125 years of parks</p>
               </a></div>
             <div class="col-md-4  opct-90"> <a href="#"> <img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-2.png" alt="" class="img-responsive">
-              <p class="small well well-sm">Parks Canada Review</p>
+              <p class="small well brdr-rds-0 well-sm">Parks Canada Review</p>
               </a></div>
             <div class="col-md-4  opct-90"> <a href="#"><img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-1.png" alt="" class="img-responsive">
-              <p class="small well well-sm">Lost Arctic Ships</p>
+              <p class="small well brdr-rds-0 well-sm">Lost Arctic Ships</p>
               </a></div>
           </div>
         </div>
@@ -116,18 +116,18 @@
         &lt;div class=&quot;col-md-4 opct-90&quot;&gt;
           &lt;a href=&quot;#&quot;&gt;
             &lt;img width=&quot;100&quot; height=&quot;50&quot; src=&quot;position-mini-3.png&quot; alt=&quot;&quot; class=&quot;img-responsive&quot;&gt;
-            &lt;p class=&quot;small well well-sm&quot;&gt;125 years of parks&lt;/p&gt;
+            &lt;p class=&quot;small well brdr-rds-0 well-sm&quot;&gt;125 years of parks&lt;/p&gt;
           &lt;/a&gt;
         &lt;/div&gt;
         &lt;div class=&quot;col-md-4  opct-90&quot;&gt;
 		  &lt;a href=&quot;#&quot;&gt;
             &lt;img width=&quot;100&quot; height=&quot;50&quot; src=&quot;position-mini-2.png&quot; alt=&quot;&quot; class=&quot;img-responsive&quot;&gt;
-            &lt;p class=&quot;small well well-sm&quot;&gt;Parks Canada Review&lt;/p&gt;
+            &lt;p class=&quot;small well brdr-rds-0 well-sm&quot;&gt;Parks Canada Review&lt;/p&gt;
           &lt;/a&gt;
         &lt;/div&gt;
         &lt;div class=&quot;col-md-4  opct-90&quot;&gt;
             &lt;a href=&quot;#&quot;&gt;&lt;img width=&quot;100&quot; height=&quot;50&quot; src=&quot;position-mini-1.png&quot; alt=&quot;&quot; class=&quot;img-responsive&quot;&gt;
-            &lt;p class=&quot;small well well-sm&quot;&gt;Lost Arctic Ships&lt;/p&gt;
+            &lt;p class=&quot;small well brdr-rds-0 well-sm&quot;&gt;Lost Arctic Ships&lt;/p&gt;
           &lt;/a&gt;
         &lt;/div&gt;
       &lt;/div&gt;
@@ -141,13 +141,13 @@
         <div class="col-md-8 pstn-tp-md pstn-rght-md mrgn-tp-md mrgn-rght-md">
           <div class="row">
             <div class="col-md-4 opct-90"> <a href="#"><img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png" alt="" class="img-responsive">
-              <p class="small well well-sm">125 years of parks</p>
+              <p class="small well brdr-rds-0 well-sm">125 years of parks</p>
               </a></div>
             <div class="col-md-4  opct-90"> <a href="#"> <img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-2.png" alt="" class="img-responsive">
-              <p class="small well well-sm">Parks Canada Review</p>
+              <p class="small well brdr-rds-0 well-sm">Parks Canada Review</p>
               </a></div>
             <div class="col-md-4  opct-90"> <a href="#"><img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-1.png" alt="" class="img-responsive">
-              <p class="small well well-sm">Lost Arctic Ships</p>
+              <p class="small well brdr-rds-0 well-sm">Lost Arctic Ships</p>
               </a></div>
           </div>
         </div>
@@ -161,18 +161,18 @@
         &lt;div class=&quot;col-md-4 opct-90&quot;&gt;
           &lt;a href=&quot;#&quot;&gt;
             &lt;img width=&quot;100&quot; height=&quot;50&quot; src=&quot;position-mini-3.png&quot; alt=&quot;&quot; class=&quot;img-responsive&quot;&gt;
-            &lt;p class=&quot;small well well-sm&quot;&gt;125 years of parks&lt;/p&gt;
+            &lt;p class=&quot;small well brdr-rds-0 well-sm&quot;&gt;125 years of parks&lt;/p&gt;
           &lt;/a&gt;
         &lt;/div&gt;
         &lt;div class=&quot;col-md-4  opct-90&quot;&gt;
 		  &lt;a href=&quot;#&quot;&gt;
             &lt;img width=&quot;100&quot; height=&quot;50&quot; src=&quot;position-mini-2.png&quot; alt=&quot;&quot; class=&quot;img-responsive&quot;&gt;
-            &lt;p class=&quot;small well well-sm&quot;&gt;Parks Canada Review&lt;/p&gt;
+            &lt;p class=&quot;small well brdr-rds-0 well-sm&quot;&gt;Parks Canada Review&lt;/p&gt;
           &lt;/a&gt;
         &lt;/div&gt;
         &lt;div class=&quot;col-md-4  opct-90&quot;&gt;
             &lt;a href=&quot;#&quot;&gt;&lt;img width=&quot;100&quot; height=&quot;50&quot; src=&quot;position-mini-1.png&quot; alt=&quot;&quot; class=&quot;img-responsive&quot;&gt;
-            &lt;p class=&quot;small well well-sm&quot;&gt;Lost Arctic Ships&lt;/p&gt;
+            &lt;p class=&quot;small well brdr-rds-0 well-sm&quot;&gt;Lost Arctic Ships&lt;/p&gt;
           &lt;/a&gt;
         &lt;/div&gt;
       &lt;/div&gt;
@@ -189,7 +189,7 @@
           <div class="row">
             <div class="pstn-bttm-md pstn-lft-md">
               <div class="col-md-12">
-                <p class="opct-80 alert alert-info mrgn-bttm-0"><strong>I love camping</strong> </p>
+                <p class="opct-80 alert alert-info brdr-rds-0 mrgn-bttm-0"><strong>I love camping</strong> </p>
               </div>
             </div>
           </div>
@@ -201,7 +201,7 @@
   &lt;div class=&quot;row&quot;&gt;
     &lt;div class=&quot;pstn-bttm-md pstn-lft-md&quot;&gt;
       &lt;div class=&quot;col-md-12&quot;&gt;
-        &lt;p class=&quot;opct-80 alert alert-info mrgn-bttm-0&quot;&gt;&lt;strong&gt;I love camping&lt;/strong&gt; &lt;/p&gt;
+        &lt;p class=&quot;opct-80 alert alert-info brdr-rds-0 mrgn-bttm-0&quot;&gt;&lt;strong&gt;I love camping&lt;/strong&gt; &lt;/p&gt;
       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
@@ -214,7 +214,7 @@
           <div class="row">
             <div class="pstn-bttm-md pstn-lft-md ">
               <div class="col-md-12">
-                <p class="opct-80 alert alert-info mrgn-bttm-md mrgn-lft-md"><strong>I love camping</strong> </p>
+                <p class="opct-80 alert alert-info brdr-rds-0 mrgn-bttm-md mrgn-lft-md"><strong>I love camping</strong> </p>
               </div>
             </div>
           </div>
@@ -226,7 +226,7 @@
   &lt;div class=&quot;row&quot;&gt;
     &lt;div class=&quot;pstn-bttm-md pstn-lft-md&quot;&gt;
       &lt;div class=&quot;col-md-12&quot;&gt;
-        &lt;p class=&quot;opct-80 alert alert-info mrgn-bttm-md mrgn-lft-md&quot;&gt;&lt;strong&gt;I love camping&lt;/strong&gt; &lt;/p&gt;
+        &lt;p class=&quot;opct-80 alert alert-info brdr-rds-0 mrgn-bttm-md mrgn-lft-md&quot;&gt;&lt;strong&gt;I love camping&lt;/strong&gt; &lt;/p&gt;
       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
@@ -240,7 +240,7 @@
         <div class="col-md-12"><img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
           <div class="row">
             <div class="pstn-bttm-md col-md-12">
-              <p class="text-right opct-80 well well-sm mrgn-bttm-0"><strong>I love camping</strong> </p>
+              <p class="text-right opct-80 well brdr-rds-0 well-sm mrgn-bttm-0"><strong>I love camping</strong> </p>
             </div>
           </div>
         </div>
@@ -250,7 +250,7 @@
   &lt;img width=&quot;700&quot; height=&quot;190&quot; src=&quot;position.png&quot; alt=&quot;&quot; class=&quot;img-responsive&quot;&gt;
   &lt;div class=&quot;row&quot;&gt;
     &lt;div class=&quot;pstn-bttm-md col-md-12&quot;&gt;
-        &lt;p class=&quot;text-right opct-80 well well-sm mrgn-bttm-0&quot;&gt;&lt;strong&gt;I love camping&lt;/strong&gt; &lt;/p&gt;
+        &lt;p class=&quot;text-right opct-80 well brdr-rds-0 well-sm mrgn-bttm-0&quot;&gt;&lt;strong&gt;I love camping&lt;/strong&gt; &lt;/p&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 &lt;/div&gt;</code></pre>
@@ -261,7 +261,7 @@
         <div class="col-md-12"><img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
           <div class="row">
             <div class="pstn-bttm-md col-md-12 mrgn-bttm-lg">
-              <p class="text-right opct-80 well well-sm mrgn-bttm-0"><strong>I love camping</strong> </p>
+              <p class="text-right opct-80 well brdr-rds-0 well-sm mrgn-bttm-0"><strong>I love camping</strong> </p>
             </div>
           </div>
         </div>
@@ -271,7 +271,7 @@
   &lt;img width=&quot;700&quot; height=&quot;190&quot; src=&quot;position.png&quot; alt=&quot;&quot; class=&quot;img-responsive&quot;&gt;
   &lt;div class=&quot;row&quot;&gt;
     &lt;div class=&quot;pstn-bttm-md col-md-12 mrgn-bttm-lg&quot;&gt;
-        &lt;p class=&quot;text-right opct-80 well well-sm mrgn-bttm-0&quot;&gt;&lt;strong&gt;I love camping&lt;/strong&gt; &lt;/p&gt;
+        &lt;p class=&quot;text-right opct-80 well brdr-rds-0 well-sm mrgn-bttm-0&quot;&gt;&lt;strong&gt;I love camping&lt;/strong&gt; &lt;/p&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 &lt;/div&gt;</code></pre>
