--- a/new/design/visible-en.html
+++ b/new/design/visible-en.html
@@ -68,6 +68,7 @@
 .hidden-on .col-xs-6 .hidden-lg {
   color: #999;
   border: 1px solid #ddd;
+  display:block;
 }
 .visible-on .col-xs-6 .visible-xs,
 .visible-on .col-xs-6 .visible-sm,
@@ -103,7 +104,9 @@
           <ul>
             <li><a href="#description">Description</a></li>
             <li><a href="#responsive">Responsive showing and hiding</a></li>
-            <li><a href="#invisible">Invisible content for screen readers</a></li>
+            <li><a href="#invisible">Screen reader invisible content</a></li>
+			<li><a href="#invisible">General showing and hiding</a></li>
+			<li><a href="#replacement">Image replacement</a></li>
             <li><a href="#print">Print showing and hiding</a></li>
           </ul>
         </div>
@@ -288,9 +291,67 @@
           <code>hidden-sm hidden-md</code></span> <span class="visible-sm visible-md">&#10004; Hidden on small and medium<br />
           <code>visible-sm visible-md</code></span> </div>
       </div>
-      <h2 class="page-header" id="invisible">Invisible content for screen readers</h2>
+      <h2 class="page-header" id="invisible">Screen reader invisible content</h2>
       <p>The <code>wb-invisible</code> class clips content into a one pixel square. It allows you to create links that are descriptive (and compliant), but not visually clutter the page. It is common to use this technique to target assistive technology users. For example, JAWS users hear the information, but the visual user does not hear or see it. The <abbr title="Cascading Style Sheet">CSS</abbr> attribute <code>display:none;</code> does not achieve the same effect, as JAWS ignores this style entirely.</p>
       <pre><code>&lt;a class=&quot;button button-small&quot; href=&quot;#&quot;&gt;1&lt;span class=&quot;wb-invisible&quot;&gt;: Page 1 of search results&lt;/span&gt;&lt;/a&gt;</code></pre>
+	  
+	  
+	  
+	  
+	  
+	  <h2 class="page-header" id="general">General showing and hiding</h2>
+	  
+	  <p>Force an element to be shown or hidden with the use of <code>.show</code> and <code>.hidden</code> classes. These classes use <code>!important</code> to a
+  <p>Furthermore, <code>.invisible</code> can be used to toggle only the visibility of an element, meaning its <code>display</code> is not modified and the element can still affect the flow of the document.</p>
+<div class="mrgn-tp-lg"><pre><code>&lt;div class=<span class="s">"show"&gt;...&lt;/div&gt;
+&lt;div class=<span class="s">"hidden"&gt;...&lt;/div&gt;
+</code></pre></div>
+<div class="mrgn-tp-lg"><pre><code>// Classes
+.show {
+  display: block !important;
+}
+.hidden {
+  display: none !important;
+  visibility: hidden !important;
+}
+.invisible {
+  visibility: hidden;
+}
+</code></pre></div>
+<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+        <div class="col-md-6">
+          <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+          <p>(Info goes here)</p>
+        </div>
+        <div class="col-md-6 brdr-lft">
+          <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+          <p>(Info goes here)</p>
+        </div>
+      </div>
+
+
+
+  <h2 id="replacement">Image replacement</h2>
+  <p>Utilize the <code>.text-hide</code> class or mixin to help replace an element's text content with a background image.</p>
+<div class="mrgn-tp-lg"><pre><code>&lt;h1 class=<span class="s">"text-hide"&gt;Custom heading&lt;/h1&gt;
+</code></pre></div>
+	  <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+        <div class="col-md-6">
+          <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+          <p>(Info goes here)</p>
+        </div>
+        <div class="col-md-6 brdr-lft">
+          <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+          <p>(Info goes here)</p>
+        </div>
+      </div>
+	  
+	  
+	  
+	  
+	  
+	  
+	  
       <h2 class="page-header" id="print">Print showing and hiding</h2>
       <p>Similar to the regular responsive classes, use these for toggling content for print.</p>
       <div class="table-responsive">
