--- a/new/role/author-en.html
+++ b/new/role/author-en.html
@@ -37,7 +37,7 @@
       <div class="panel-body">
         <p>Although a webmaster or developer does not create the content, they must still know basic content creation principals.</p>
         <p>Refer to:</p>
-        <ul class="clmn-2-md list-unstyled">
+        <ul class="clmn-2-md list-inline">
           <li><a href="../writing/principals-en.html" class="btn btn-primary mrgn-bttm-sm btn-block">Content creation principals</a></li>
           <li><a href="../writing/formatting-en.html" class="btn btn-primary btn-block">Content formatting</a></li>
         </ul>
