Old (v3.1) guide: Fixed various broken links and re-added missing mega menu include.

--- a/old/layout-en.html
+++ b/old/layout-en.html
@@ -62,7 +62,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </div></section>
 
 <div id="wet-bnr" role="banner"><div id="wet-bnr-in">
-<div id="wet-title"><p id="wet-title-in"><a href="../../index-en.html" lang="en"><object data="./dist/dist/theme-wet-boew/images/logo.svg" role="img" tabindex="-1" type="image/svg+xml"><img src="./dist/dist/theme-wet-boew/images/logo.png" alt="" /></object> <span>Web Experience Toolkit&#160;(WET) <small>Collaborative open source project led by the Government of Canada</small></span></a></p></div>
+<div id="wet-title"><p id="wet-title-in"><a href="http://wet-boew.github.io/v3.1-ci/index-en.html" lang="en"><object data="./dist/dist/theme-wet-boew/images/logo.svg" role="img" tabindex="-1" type="image/svg+xml"><img src="./dist/dist/theme-wet-boew/images/logo.png" alt="" /></object> <span>Web Experience Toolkit&#160;(WET) <small>Collaborative open source project led by the Government of Canada</small></span></a></p></div>
 
 <section role="search"><div id="wet-srchbx"><h2>Search</h2>
 <form action="#" method="post"><div id="wet-srchbx-in">
@@ -76,15 +76,15 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div id="wet-psnb"><h2>Site menu</h2><div id="wet-psnb-in"><div class="wet-boew-menubar mb-mega"><div>
 <ul class="mb-menu" data-ajax-replace="includes/projectmenu-en.txt">
 <li><div><a href="http://wet-boew.github.io/wet-boew/index-en.html">WET project</a></div></li>
-<li><div><a href="https://github.com/wet-boew/wet-boew/wiki/Implementing-WET">Implement WET</a></div></li>
-<li><div><a href="https://github.com/wet-boew/wet-boew/wiki/Contributor-guidelines">Contribute to WET</a></div></li>
+<li><div><a href="http://wet-boew.github.io/v3.1-ci/docs/gs-cd/impl-en.html">Implement WET</a></div></li>
+<li><div><a href="http://wet-boew.github.io/v3.1-ci/docs/gs-cd/contrib-en.html">Contribute to WET</a></div></li>
 </ul>
 </div></div></div></div>
 
 <div id="wet-bc"><h2>Breadcrumb trail</h2><div id="wet-bc-in">
 <ol>
-<li><a href="../../index-en.html">Home</a></li>
-<li><a href="../index-en.html">Working examples</a></li>
+<li><a href="http://wet-boew.github.io/v3.1-ci/index-en.html">Home</a></li>
+<li><a href="http://wet-boew.github.io/v3.1-ci/demos/index-en.html">Working examples</a></li>
 <li>Page layout - Design guide</li>
 </ol>
 </div></div>
@@ -131,7 +131,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <p>1</p>
     </div>
     <div class="clear"></div>
-    <p class="float-right"><a href="../grids/grid-base-en.html" class="button">View all grid options</a></p>
+    <p class="float-right"><a href="http://wet-boew.github.io/v3.1-ci/demos/grids/grid-base-en.html" class="button">View all grid options</a></p>
 </div>
 <div class="clear"></div>
 
@@ -212,7 +212,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="span-2">
 	<h3 class="margin-top-none margin-bottom-none">Demo</h3>
 	<p>This image has <code>mobile-hide</code> applied to it, so it will not show in resolutions &lt;&#160;959px.</p>
-	<img height="168" width="220" alt="Sunflower" src="../grids/images/a7.jpg" class="mobile-hide" />
+	<img height="168" width="220" alt="Sunflower" src="http://wet-boew.github.io/v3.1-ci/demos/grids/images/a7.jpg" class="mobile-hide" />
 	<p>A mobile jump menu will appear below in resolutions &lt;&#160;959px.</p>
 	<ul class="mobile-show margin-top-large margin-bottom-large" data-inset="true" data-role="listview">
 		<li><a href="#">Menu item 1</a></li>
