Minor Fixes Related to Jekyll Update
Fixes issues with unnecessary/abundant text and french/english links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="row mrgn-tp-lg">
 <div class="col-md-12">
 <section class="col-md-6">
-<h2 class="h3 text-center">Language selection<br /> <small>Web Experience Toolkit</small></h2>
+<h2 class="h3 text-center">Language selection - Style Guide<br /> <small>Web Experience Toolkit</small></h2>
 <a class="btn btn-lg btn-primary btn-block" href="index-en.html">English</a>
 <a class="btn btn-lg btn-default btn-block" href="https://wet-boew.github.io/wet-boew/License-en.html" rel="license">Terms and conditions of use</a>
 </section>
