Fix meta redirect

--- a/v4/index-en.html
+++ b/v4/index-en.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<title>Redirect to https://wet-boew.github.io/wet-boew-styleguide/index-en.html</title>
-		<meta http-equiv="refresh" content="https://wet-boew.github.io/wet-boew-styleguide/index-en.html" />
+		<meta http-equiv="refresh" content="0;url=https://wet-boew.github.io/wet-boew-styleguide/index-en.html" />
 	</head>
 	<body>
 	</body>
