--- a/v4/index-fr.html
+++ b/v4/index-fr.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 	<head>
 		<title>Redirection vers https://wet-boew.github.io/wet-boew-styleguide/index-fr.html</title>
-		<meta http-equiv="refresh" content="https://wet-boew.github.io/wet-boew-styleguide/index-fr.html" />
+		<meta http-equiv="refresh" content="0;url=https://wet-boew.github.io/wet-boew-styleguide/index-fr.html" />
 	</head>
 	<body>
 	</body>
