Fix Home Page Link

--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
 <p>Error 404</p>
 <p>We're sorry you ended up here. Sometimes a page gets moved or deleted, but hopefully we can help you find what you're looking for.</p>
 <ul>
-<li>Return to the <a href="../../wet-boew-styleguide/index-en.html">home page</a></li>
+<li>Return to the <a href="/wet-boew-styleguide/index-en.html">home page</a></li>
 </ul>
 </section>
 <section lang="fr" class="col-sm-12 col-md-6">
@@ -27,7 +27,7 @@
 <p>Erreur 404</p>
 <p>Nous sommes désolés que vous ayez abouti ici. Il arrive parfois qu'une page ait été déplacée ou supprimée. Heureusement, nous pouvons vous aider à trouver ce que vous cherchez.</p>
 <ul>
-<li>Retournez à la <a href="../../wet-boew-styleguide/index-fr.html">page d'accueil</a></li>
+<li>Retournez à la <a href="/wet-boew-styleguide/index-fr.html">page d'accueil</a></li>
 </ul>
 </section>
 </div>
